CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.1:
 1:
  NetcdfDataset calls CoordSysBuilder.augmentDataset(), then processes scale/missing, then calls buildCoordSys()
  Variable.slice() : ok on record dimension size = 0
  FeatureDatasetPointXML for creating capabilities document for FeatureDataset
  Try to make nested Table configuration XML
  NcStreamRemote -> CdmRemote
 0:
  GridDataset: getVariables() only returns the grids
  AggExistingOne : make time coord into a String
  DODNetcdfFile: workaround for Grid HDF4 wierdness (Float64 Longitude[fakeDim2 = 8192])
  InvDatasetImpl : check if parent is null  
  VariableDS only sets orgDataType when its wrapping a variable.
  AggregationOuterDimension tolerates different types between main variable and nested
  AggregationOuterDimension.cacheVar may keep data as different type, make sure to convert to correct type in read()
  MAMath.convert - utility routine for converting Arrays to different types.
  Cosmic data - FeatureType plug
  AggregationOuterDimension.rebuildDatasets(): bug on updating datasets, assuming agg vars are 1D (!)
  HDF4 images use unshared dimensions
  ToolsUI/IOSP/HDF4
  CFConventions look for standard name attribute for latitude / longitude    
  GridCoordSys: 2D Coordinate Systems now can find index (i,j) from (lat, lon) coord
  CoordinateAxis2D: do not cache data, messes up strided data access
  NcML: values can be specified by fromAttribute
  filesystem caching in Aggregation, PointCollection
  DateUnit refactor - use udunit.conveCoordSysrt() instead of TimeUnit as base time
  udunits numeric timezone bug

Changes in version 4.0:
  48:
   WRF Conventions looks for GRIDTYPE if it cant find DYN_OPT
   improve M3IO CoordSysBuilder, from Qun He
   Stereographic Projection, from the "natural origin" and the tangent point, calculating the scale factor.
   ToolsUI: Viewer: compare two files, global attributes table