@@ -34,7 +34,6 @@ package ucar.nc2.ft.point.standard;
 
 import ucar.nc2.constants.FeatureType;
 import ucar.nc2.Dimension;
-import ucar.nc2.Variable;
 import ucar.ma2.ArrayStructure;
 import ucar.ma2.StructureData;
 
@@ -61,10 +60,11 @@ public class TableConfig {
   public String nestedTableName; // short name of structure
   public boolean isPsuedoStructure = false;
 
-  // linked, contiguous  list
+  // linked, contiguous list
   public String start;  // name of variable - starting child index (in parent)
   public String next;  // name of variable - next child index (in child)
   public String numRecords;  // name of variable - number of children (in parent)
+  public int[] startIndex;  // starting child index for each parent
 
   // top only
   public FeatureType featureType;
